cmake_minimum_required(VERSION 4.0)
project(Arrays)

set(CMAKE_CXX_STANDARD 20)

add_executable(Arrays DSA/main.cpp
        DSA/two_pointers.cpp
        CPP/oops.cpp
        DSA/rotate_array.cpp
        CPP/inhertance.cpp
        DSA/prefix.cpp
        CPP/abstraction.cpp
        CPP/lec_string.cpp
        DSA/linkedlist.cpp
        DSA/insertion_linkedlist.cpp
        DSA/lc707.cpp
        CPP/stl.cpp
        DSA/doublly_linkedlist.cpp
        CPP/2d_array.cpp
        CPP/operator_overloading.cpp
        DSA/stack.cpp)
